# GrainForge

./: .gitignore  Cargo.toml  README.md  build_log.txt
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs  theme.rs
src/core/: error.rs  export.rs  film_stock.rs  history.rs  mod.rs  parameter.rs  presets.rs
src/engine/: compute_pipeline.rs  gpu_context.rs  grain_renderer.rs  mod.rs  render_pipeline.rs  texture_manager.rs
src/engine/shaders/: grain.wgsl  mod.rs  noise.wgsl
src/export/: mod.rs
src/nodes/: mod.rs
src/nodes/nodes/: mod.rs
src/ui/: inspector.rs  main_window.rs  mod.rs  preview.rs  sidebar.rs  toolbar.rs
src/ui/dialogs/: mod.rs
src/ui/widgets/: mod.rs
src/utils/: mod.rs  validation.rs
