[package]
name = "grainforge"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30", default-features = true }
egui = "0.30"
# wgpu = "23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# image = { version = "0.25", features = ["openexr", "tiff", "png", "jpeg"] }
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
# egui-snarl = "0.6" # Disabled

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
